[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/pole.png" type="Texture" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/Hero.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/Game.gd" type="Script" id=4]
[ext_resource path="res://game/in_game.mp3" type="AudioStream" id=5]
[ext_resource path="res://tile.tres" type="TileSet" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -520, -520, 0, 0, 0, 0, 1272, -512, 0, 0, 0, 0, 1280, 704, 0, 0, 0, 0, -520, 704, 0, 0, 0, 0, -520, -520 )
}

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="music_in_game" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -39.0
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1104.0
margin_top = -984.0
margin_right = 2832.0
margin_bottom = 1832.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Hero" parent="." instance=ExtResource( 3 )]
position = Vector2( 288, 96 )

[node name="HUD" parent="Hero" instance=ExtResource( 2 )]
position = Vector2( 0, 4 )
z_index = 2

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 300, 100 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 369.778, 303.686 )
scale = Vector2( 0.711111, 0.568627 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( -520, -520 )
rotation = 0.00447172

[node name="TileMap" type="TileMap" parent="."]
z_index = 1
tile_set = ExtResource( 6 )
format = 1
tile_data = PoolIntArray( -393198, 0, 0, -327676, 0, 0, -327672, 0, 0, -327665, 0, 0, -327656, 0, 0, -262144, 0, 0, -262132, 0, 0, -262127, 0, 0, -131075, 0, 0, -196588, 0, 0, -65540, 0, 0, -131072, 0, 0, -131070, 0, 0, -131067, 0, 0, -131062, 0, 0, -131058, 0, 0, -131051, 0, 0, -65518, 0, 0, -65512, 0, 0, 65532, 0, 0, 29, 0, 0, 65538, 0, 0, 65544, 0, 0, 65550, 0, 0, 65557, 0, 0, 196607, 0, 0, 131097, 0, 0, 262141, 0, 0, 196611, 0, 0, 196627, 0, 0, 327675, 0, 0, 262145, 0, 0, 262155, 0, 0, 262160, 0, 0, 262171, 0, 0, 327687, 0, 0, 327705, 0, 0, 458751, 0, 0, 393217, 0, 0, 393237, 0, 0, 458762, 0, 0, 458770, 0, 0, 589819, 0, 0, 589820, 0, 0, 524291, 0, 0, 524314, 0, 0, 524317, 0, 0, 655354, 0, 0, 655358, 0, 0, 589831, 0, 0, 589835, 0, 0, 589840, 0, 0, 589845, 0, 0, 720922, 0, 0, 851961, 0, 0, 851964, 0, 0, 786433, 0, 0, 786452, 0, 0, 851976, 0, 0, 851978, 0, 0, 851981, 0, 0, 983037, 0, 0, 917506, 0, 0, 917529, 0, 0, 917532, 0, 0, 983045, 0, 0, 983055, 0, 0, 983061, 0, 0, 1114108, 0, 0, 1048587, 0, 0, 1048594, 0, 0, 1114112, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179672, 0, 0, 1179677, 0, 0, 1245199, 0, 0, 1245203, 0, 0, 1376283, 0, 0 )

[connection signal="lvl_up" from="." to="Hero/HUD" method="_on_Game_lvl_up"]
[connection signal="show" from="." to="Hero/HUD" method="_on_Game_show"]
[connection signal="hit" from="Hero" to="." method="_on_Hero_hit"]
[connection signal="s" from="Hero/HUD" to="Hero" method="_on_HUD_s"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
